--- a/controlapplication/MyApplication02/app/src/main/res/layout/activity_main.xml
+++ b/controlapplication/MyApplication02/app/src/main/res/layout/activity_main.xml
@@ -34,13 +34,13 @@
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="+1"
+            android:text="start"
             android:id="@+id/plus_btn"/>
         <Button
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="-1"
+            android:text="stop"
             android:id="@+id/minus_btn"/>
     </LinearLayout>
 
